# multi-scale-label-map-extraction

./: .gitignore  LICENSE  README.md  requirements.txt
doc/: index.md
examples/: SLIC_compare.py  SLIC_compare_video.py  SLIC_multiple_scales.py  SLIC_show.py  load_mat_file.py  run_existing_SLIC.py
importers/Matlab/: HSLIC.m
importers/c++/: CMakeLists.txt
importers/c++/examples/: HSLIC_demo.cpp  HSLIC_features_demo.cpp  example_utils.h  label_map_demo.cpp
importers/c++/include/: HSLIC.h  label_map.h  region_io.h  region_map.h  region_tree.h
importers/c++/src/: HSLIC.cpp  HSLIC_demo.cpp  label_map_demo.cpp  region_io.cpp  region_tree.cpp
src/: data_management.py  freeze_programs.py  gpu_conf.ini  gpu_device_selection.py  multiscale_extraction.py  steps_demonstration.py  texture_selection.py  utils.py
src/diffution_system/: SLIC_gpu.py  SLIC_multiscale.py  clustering_gpu.py  diffusion_graph.py  feature_space.py  hierarchical_SLIC.py  io.py  label_map.py  region_map.py  stochastic_NMF_gpu.py  tile_map.py
src/figures/: SLIC_compare.py  SLIC_compare_video.py  SLIC_show.py
src/gpu/: __init__.py  gpu_algorithms.py  gpu_image_filter.py  gpu_matrix_dot.py  gpu_sparse_matrix.py  in_kernal_matrix.py  knn_finder.py  opencl_profile.py  opencl_tools.py
